# ai-tutor-native

./: .gitignore  README.md  api-audit.md  skills-lock.json
ai_server/: .env.example  .gitignore  PHASE1_PLAN.md  pyproject.toml
ai_server/app/: config.py  main.py
ai_server/app/agents/: definitions.py  registry.py
ai_server/app/providers/: anthropic_provider.py  gemini_provider.py  openai_provider.py
ai_server/app/runtime/: executor.py  reasoning.py
ai_server/app/security/: result_signing.py  service_secret.py  session_token.py
ai_server/app/transport/: embed_routes.py  reason_routes.py  router.py  run_routes.py  session_routes.py  speak_routes.py
ai_server/tests/: conftest.py
ai_server/tests/integration/: test_embed.py  test_healthz.py  test_reason.py  test_reason_result.py  test_run.py  test_session.py  test_speak.py
ai_server/tests/unit/: test_config.py  test_executor_json.py  test_reasoning.py  test_registry.py  test_result_signing.py  test_service_secret.py  test_session_guard.py  test_session_token.py
backend/: .env.example  .gitignore  ARCHITECTURE.md  CONTEXT.md  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2026_05_30_2034-472409161500_create_users.py  2026_06_05_0918-c730b822296a_add_full_schema.py  (+1 more)
backend/app/: main.py
backend/app/shared/: config.py  db.py  (+2 more)
backend/context/: 1-mission.md  2-code-standard.md  3-ai-workflow.md  4-progress-tracker.md  5-roadmap.md  6-tech-stack.md  phase-2a-task-breakdown.md
backend/tests/: conftest.py
(+247 files in other folders)
