[project]
name = "ai-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.118",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "sse-starlette>=2.1",
  "httpx>=0.28",
  "pyjwt[crypto]>=2.10",
  "anthropic>=0.50",
  "openai>=1.60",
  "google-genai>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.4", "pytest-asyncio>=0.25", "ruff>=0.9", "mypy>=1.14"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
