[project]
name = "ai-tutor-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.118",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "email-validator>=2.2",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "pgvector>=0.3",
  "httpx>=0.28",
  "pyjwt[crypto]>=2.10",
  "alembic>=1.14",
  "python-multipart>=0.0.20",
  "anthropic>=0.50",
  "openai>=1.60",
  "pypdf>=5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "httpx>=0.28",
  "ruff>=0.9",
  "mypy>=1.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
